nambahin div dan h1

--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
     <title>mim</title>
 </head>
 <body>
-    <header>
-        <h1>mim</h1>
-    </header>
+    <div class="header">
+        <div class="container">
+            <h1>mim</h1>
+        </div>
+    </div>
 </body>
 </html>
