--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
     <div class="header">
         <div class="container">
             <h1>mim</h1>
+            <ul>
+                <li><a href="#">home</a></li>
+                <li><a href="#">about</a></li>
+                <li><a href="#">service</a></li>
+            </ul>
         </div>
     </div>
 </body>
