--- a/index.html
+++ b/index.html
@@ -12,9 +12,10 @@
         <div class="container">
             <h1>mim</h1>
             <ul>
-                <li><a href="#">home</a></li>
-                <li><a href="#">about</a></li>
-                <li><a href="#">service</a></li>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Trending</a></li>
+                <li><a href="#">Service</a></li>
             </ul>
         </div>
     </div>
