--- a/index.html
+++ b/index.html
@@ -5,18 +5,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>mim</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Sanchez&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="header">
-        <div class="container">
-            <h1>mim</h1>
-            <ul>
+        <div class="logo">
+            <h1>M<span>i</span>M</h1>
+            <div class="header-list"><ul>
                 <li><a href="#">Home</a></li>
                 <li><a href="#">About</a></li>
                 <li><a href="#">Trending</a></li>
                 <li><a href="#">Service</a></li>
             </ul>
+            </div>
         </div>
     </div>
 </body>
