--- a/index.html
+++ b/index.html
@@ -11,16 +11,18 @@
     <link href="https://fonts.googleapis.com/css2?family=Sanchez&display=swap" rel="stylesheet">
 </head>
 <body>
+    <!--header start-->
     <div class="header">
         <div class="logo">
-            <h1>M<span>i</span>M</h1>
-            <div class="header-list"><ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Trending</a></li>
-                <li><a href="#">Service</a></li>
+            M<span>i</span>M
+        </div>
+        <div class="list">
+            <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Trending</a></li>
+            <li><a href="#">Service</a></li>
             </ul>
-            </div>
         </div>
     </div>
     <div class="main"></div>
