icon search,sisa posisi

--- a/index.html
+++ b/index.html
@@ -23,6 +23,12 @@
             <li><a href="#">Trending</a></li>
             <li><a href="#">Service</a></li>
             </ul>
+            <div class="header-search">
+                <form action="#">
+                    <input class="search" type="text" placeholder="Cari.." required>
+                    <input class="button" type="button" value="Cari">
+                </form>
+            </div>
         </div>
     </div>
     <div class="main"></div>
