search button done

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Sanchez&display=swap" rel="stylesheet">
-</head>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 <body>
     <!--header start-->
     <div class="header">
@@ -24,9 +24,9 @@
             <li><a href="#">Service</a></li>
             </ul>
             <div class="header-search">
-                <form action="#">
-                    <input class="search" type="text" placeholder="Cari.." required>
-                    <input class="button" type="button" value="Cari">
+                <form action="#" method="get">
+                    <input class="search" type="text"  placeholder="cari.." required>
+                    <input class="button" type="button" value="cari">
                 </form>
             </div>
         </div>
