--- a/index.html
+++ b/index.html
@@ -31,6 +31,12 @@
             </div>
         </div>
     </div>
+    <div class="cover">
+        <div class="cover-container">
+            <h1>Welcome to website MiM</h1>
+            <p>Kami akan menyediakan berbagai mentahan meme dan video lucu</p>
+        </div>
+    </div>
     <div class="main"></div>
     <div class="footer"></div>
 </body>
