--- a/index.html
+++ b/index.html
@@ -32,9 +32,12 @@
         </div>
     </div>
     <div class="cover">
+        <div class="cover-img">
+            <img src="upload/cover-web-mim.png">
         <div class="cover-container">
             <h1>Welcome to website MiM</h1>
             <p>Kami akan menyediakan berbagai mentahan meme dan video lucu</p>
+            </div>
         </div>
     </div>
     <div class="main"></div>
