add background done

--- a/index.html
+++ b/index.html
@@ -33,11 +33,9 @@
     </div>
     <div class="cover">
         <div class="cover-img">
-            <img src="upload/cover-web-mim.png">
-        <div class="cover-container">
-            <h1>Welcome to website MiM</h1>
-            <p>Kami akan menyediakan berbagai mentahan meme dan video lucu</p>
-            </div>
+            <img src="upload/cover-web-2.png">
+            <h1 class="atas">Welcome to website MiM</h1>
+            <p class="bawah">Kami akan menyediakan berbagai mentahan meme dan video lucu</p>
         </div>
     </div>
     <div class="main"></div>
