perubahan lebar img

--- a/index.html
+++ b/index.html
@@ -31,9 +31,11 @@
             </div>
         </div>
     </div>
+    <!--header end-->
+    <!--cover img start-->
     <div class="cover">
         <div class="cover-img">
-            <img src="upload/cover-web-2.png">
+            <img src="upload/cover-web-2.png" width="100%">
             <h1 class="atas">Welcome to website MiM</h1>
             <p class="bawah">Kami akan menyediakan berbagai mentahan meme dan video lucu</p>
         </div>
