--- a/index.html
+++ b/index.html
@@ -35,9 +35,11 @@
     <!--cover img start-->
     <div class="cover">
         <div class="cover-img">
-            <img src="upload/cover-web-2.png" width="100%">
-            <h1 class="atas">Welcome to website MiM</h1>
-            <p class="bawah">Kami akan menyediakan berbagai mentahan meme dan video lucu</p>
+            <img src="upload/cover-web-2.png" alt="cover-mim" width="100%">
+            <div class="text">
+                <h2>Welcome to website MiM</h2>
+                <p>Kami akan menyediakan berbagai mentahan meme dan video lucu</p>
+            </div>
         </div>
     </div>
     <div class="main"></div>
